--- a/MusicPlayer/Base.lproj/Main.storyboard
+++ b/MusicPlayer/Base.lproj/Main.storyboard
@@ -16,37 +16,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y7t-SB-RHJ">
-                                <rect key="frame" x="60" y="171" width="242" height="233"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="button_play"/>
-                                <connections>
-                                    <action selector="touchUpPlayPauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sy6-4N-RU4"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4M-Yr-IcZ">
-                                <rect key="frame" x="160" y="412" width="98" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4M-Yr-IcZ">
+                                <rect key="frame" x="175" y="314" width="64" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="OT8-Kh-Iwq">
-                                <rect key="frame" x="58" y="465" width="290" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="OT8-Kh-Iwq">
+                                <rect key="frame" x="14" y="347" width="386" height="31"/>
                                 <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
                                 <connections>
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="8Dr-zG-ffi"/>
                                 </connections>
                             </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyv-LO-b6t">
+                                <rect key="frame" x="107" y="94" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="a66-JO-khb"/>
+                                    <constraint firstAttribute="width" constant="200" id="gwJ-0d-Kzc"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="button_play"/>
+                                <state key="selected" image="button_pause"/>
+                                <connections>
+                                    <action selector="touchUpPlayPauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4W9-fD-TD3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OT8-Kh-Iwq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1U9-yZ-QD9"/>
+                            <constraint firstItem="L4M-Yr-IcZ" firstAttribute="top" secondItem="wyv-LO-b6t" secondAttribute="bottom" constant="20" id="4Zv-ok-boC"/>
+                            <constraint firstItem="wyv-LO-b6t" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="bS9-jL-T8C"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OT8-Kh-Iwq" secondAttribute="trailing" constant="16" id="mEy-th-FPn"/>
+                            <constraint firstItem="OT8-Kh-Iwq" firstAttribute="top" secondItem="L4M-Yr-IcZ" secondAttribute="bottom" constant="16" id="qKs-cg-i00"/>
+                            <constraint firstItem="L4M-Yr-IcZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qvz-Rv-Vte"/>
+                            <constraint firstItem="wyv-LO-b6t" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rfs-oT-KFE"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="parogressSlider" destination="OT8-Kh-Iwq" id="ziR-Fn-7tB"/>
-                        <outlet property="playPauseButton" destination="Y7t-SB-RHJ" id="dxv-8K-Mqw"/>
+                        <outlet property="playPauseButton" destination="wyv-LO-b6t" id="zKY-n9-SHI"/>
+                        <outlet property="progressSlider" destination="OT8-Kh-Iwq" id="ZGe-Gv-xl7"/>
                         <outlet property="timeLabel" destination="L4M-Yr-IcZ" id="6aK-Z3-55o"/>
                     </connections>
                 </viewController>
@@ -56,6 +67,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="button_pause" width="185" height="185"/>
         <image name="button_play" width="187" height="189"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
